--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
+
+
+/*  - Dark Blue (Dark Mode Elements): hsl(209, 23%, 22%)
+    - Very Dark Blue (Dark Mode Background): hsl(207, 26%, 17%)
+    - Very Dark Blue (Light Mode Text): hsl(200, 15%, 8%)
+    - Dark Gray (Light Mode Input): hsl(0, 0%, 52%)
+    - Very Light Gray (Light Mode Background): hsl(0, 0%, 98%)
+    - White (Dark Mode Text & Light Mode Elements): hsl(0, 0%, 100%)
+ */
+
+$darkBlue-darkMode: hsl(209, 23%, 22%);
+$veryDarkBlue-darkMode: hsl(207, 26%, 17%);
+
+
+$veryDarkBlue-lightMode: hsl(200, 15%, 8%);
+$darkGrey-lightMode: hsl(0, 0%, 52%);
+$veryLightGrey-lightMode: hsl(0, 0%, 98%);
+
+$white: hsl(0, 0%, 100%);
+
+$sombra: 1px 1px 10px rgb(228, 228, 228);
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 300, 600, 800;
+    color: $veryDarkBlue-lightMode;
+    font-size: 1.1rem;
+
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    background-color: $veryLightGrey-lightMode;
+    transition: background-color 0.3s ease;
+}
+
+
+
+
+
