--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,14 @@
-<div class="container-fluid">
-    <div class="container-fluid">
-        <input type="text">
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-              <button class="dropdown-item" type="button">AAAAAAAAAAAAAAAAAAAA</button>
-              <button class="dropdown-item" type="button">Another action</button>
-              <button class="dropdown-item" type="button">Something else here</button>
-            </div>
+<div class="container-fluid" id="content">
+    <div class="container-fluid">     
+        <div class="flexDataDiv"> 
+            <label for="countrySearch">Search for a country</label>
+            <input type="text" pInputText [(ngModel)]="inputValue" id="countrySearch" variant="filled"/>
         </div>
+        <div class="flexDataDiv" id="flexDropdown">
+            <label for="dropdown">Filter by Region</label>
+            <select id="dropdown" pInputText [(ngModel)]="selectedRegion" (change)="onSelectChange($event)">
+              <option *ngFor="let regiao of regioes" [value]="regiao">{{ regiao }}</option>
+            </select>
+        </div>          
     </div>
 </div>
