--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,3 +1,49 @@
+@import '../../../styles.scss';
+
+
+#content {
+    padding: 0 60px;
+}
+
 div.container-fluid {
-    margin: 20px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+
+    div.flexDataDiv {
+
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+
+        input {
+            transition: box-shadow 0.3s ease , border 0.3s ease;
+            padding: 15px 30px;
+            border-radius: 5px 10px;
+            background-color: $veryLightGrey-lightMode;
+            
+            &:hover , &:focus {
+                box-shadow: 5px 5px 10px rgb(228, 228, 228);
+                border: 2px solid $veryLightGrey-lightMode;
+            }
+        }
+    }
+
+    #flexDropdown {
+        width: 20%;
+
+        select, option {
+            transition: box-shadow 0.3s ease , border 0.3s ease;
+            padding: 15px 30px;
+            border-radius: 5px 10px;
+            background-color: $veryLightGrey-lightMode;
+            
+            &:hover , &:focus {
+                box-shadow: 5px 5px 10px rgb(228, 228, 228);
+                border: 2px solid $veryLightGrey-lightMode;
+            }
+        }
+    }
+
 }
