--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,7 @@ nav {
     padding: 20px 60px;
     box-shadow: $sombra;
     position: static;
+    margin-bottom: 20px;
     
     span {
         font-weight: 800;
