--- a/src/app/components/nation-card/nation-card.component.html
+++ b/src/app/components/nation-card/nation-card.component.html
@@ -1,8 +1,9 @@
 <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="../../../assets/OIP.jfif" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h5 class="card-title">Brazil</h5>
+      <p class="card-text"> <b>Population:</b> pipipopopo</p>
+      <p class="card-text"> <b>Region:</b> pipipipopopo</p>
+      <p class="card-text"> <b>Capital:</b> pipipipopopo</p>
     </div>
   </div>
