--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,5 +14,9 @@
 
     <div id="cardsArea">
         <app-nation-card/>
+        <app-nation-card/>
+        <app-nation-card/>
+        <app-nation-card/>
+        <app-nation-card/>
     </div>
 </div>
