--- a/src/app/components/nation-card/nation-card.component.scss
+++ b/src/app/components/nation-card/nation-card.component.scss
@@ -7,6 +7,7 @@
     box-shadow: $sombra;
     transition: box-shadow 0.3s ease , border 0.3s ease;
 
+
     &:hover {
         box-shadow: 5px 5px 10px rgb(228, 228, 228);
         border: 1px solid $veryLightGrey-lightMode;
@@ -15,7 +16,7 @@
 
     .card-body {
         padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x) calc(var(--bs-card-spacer-y) + 1.6em) var(--bs-card-spacer-x);
-        color: var(--bs-card-color);
+        color: $veryDarkBlue-lightMode;
     
         .card-title {
             margin: 0.6rem 0 0.9rem 0;
@@ -28,7 +29,6 @@
             margin-top: 0;
             margin-bottom: 0.2rem;
             font-size: 0.9rem;
-    
             b {
                 font-weight: 600;
                 font-size: 0.9rem;
