--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -47,3 +47,40 @@
     }
 
 }
+
+#cardsArea {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
+    gap: 70px 10px;
+    justify-items: center; 
+    margin-top: 30px;
+
+    & > :nth-child(4n + 1) {
+        justify-self: start; 
+    }
+
+    & > :nth-child(4n) {
+        justify-self: end; 
+    }
+}
+
+@media screen and (max-width: 1450px) {
+    #cardsArea {
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
+    }
+    
+}
+
+@media screen and (max-width: 1100px) {
+    #cardsArea {
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+    }
+    
+}
+
+@media screen and (max-width: 750px) {
+    #cardsArea {
+        grid-template-columns: repeat(1, minmax(250px, 1fr));
+    }
+    
+}
