--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ $sombra: 1px 1px 10px rgb(228, 228, 228);
 body {
     width: 100%;
     height: 100%;
-    background-color: $veryLightGrey-lightMode;
+    background-color: $veryLightGrey-lightMode !important;
     transition: background-color 0.3s ease;
 }
 
