--- a/src/app/components/nation-card/nation-card.component.html
+++ b/src/app/components/nation-card/nation-card.component.html
@@ -1,9 +1,9 @@
 <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="../../../assets/OIP.jfif" alt="Card image cap">
+    <img class="card-img-top" src={{flag}} alt={{alt}}>
     <div class="card-body">
-      <h5 class="card-title">Brazil</h5>
-      <p class="card-text"> <b>Population:</b> pipipopopo</p>
-      <p class="card-text"> <b>Region:</b> pipipipopopo</p>
-      <p class="card-text"> <b>Capital:</b> pipipipopopo</p>
+      <h5 class="card-title">{{ name }}</h5>
+      <p class="card-text"> <b>Population:</b> {{ population }}</p>
+      <p class="card-text"> <b>Region:</b> {{ region }}</p>
+      <p class="card-text"> <b>Capital:</b> {{ capital }}</p>
     </div>
   </div>
