--- a/src/app/components/nation-card/nation-card.component.scss
+++ b/src/app/components/nation-card/nation-card.component.scss
@@ -9,7 +9,7 @@
 
 
     &:hover {
-        box-shadow: 5px 5px 10px rgb(228, 228, 228);
+        box-shadow: $sombra2;
         border: 1px solid $veryLightGrey-lightMode;
     }
 
