--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,6 +19,7 @@
                  [capital]="pais.capital"
                  [region]="pais.region" 
                  [flag]="pais.flags.png" 
-                 [alt]="pais.flags.alt" />
+                 [alt]="pais.flags.alt" 
+                 (click)="goSeeDetails(pais.name.common)"/>
     </div>
 </div>
