--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -59,6 +59,7 @@
     gap: 70px 10px;
     justify-items: center; 
     margin-top: 30px;
+    cursor: pointer;
 
     & > :nth-child(4n + 1) {
         justify-self: start; 
