--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -61,25 +61,39 @@
     margin-top: 30px;
     cursor: pointer;
 
-    & > :nth-child(4n + 1) {
-        justify-self: start; 
-    }
-
-    & > :nth-child(4n) {
-        justify-self: end; 
+    
+    @media screen and (min-width: 1451px) {
+        & > :nth-child(4n + 1) {
+            justify-self: start; 
+        }
+    
+        & > :nth-child(4n) {
+            justify-self: end; 
+        }
     }
 }
 
 @media screen and (max-width: 1450px) {
     #cardsArea {
         grid-template-columns: repeat(3, minmax(250px, 1fr));
+        & > :nth-child(3n + 1) {
+            justify-self: start; 
+        }
+    
+        & > :nth-child(3n) {
+            justify-self: end; 
+        }
     }
+
     
 }
 
 @media screen and (max-width: 1100px) {
     #cardsArea {
         grid-template-columns: repeat(2, minmax(250px, 1fr));
+        & > * {
+            justify-self: center !important; 
+        }
     }
     
 }
@@ -87,6 +101,20 @@
 @media screen and (max-width: 750px) {
     #cardsArea {
         grid-template-columns: repeat(1, minmax(250px, 1fr));
+
+
+    }    
+    #searchArea #flexDropdown {
+        width: 40%;  
     }
-    
+}
+
+@media screen and (max-width: 550px) {    
+    #searchArea #flexDropdown select, #searchArea div.flexDataDiv input {
+        padding: 10px 5px;
+    }
+
+    #searchArea #flexDropdown label, #searchArea div.flexDataDiv label {
+        font-size: 0.8rem;
+    }
 }
