--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,6 +1,6 @@
 <div id="content" >
     <button class="btn" id="backButton" (click)="this.location.back()"> 
-        <img [src]="backButtonImage" alt="GoBack"> back
+        <img [src]="backButtonImage" alt="GoBack"><span>back</span>
     </button>
 
     <div id="container-infos">
